# HAMP

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml
.github/workflows/: release.yml
docs/decomp/: FriendServerReceiver.OnReceive.cs  GameServerReceiver.OnReceive.cs
docs/protocol/: game_server_login.md  game_server_packets.md  online_player_data.md
segual/: WHAT.md  friend_server.py  game_server.py
src/: admin.rs  config.rs  db.rs  friend_server.rs  game_server.rs  main.rs  packet.rs  state.rs  structs.rs
src/decomp/: gsr.onrecieve.c
src/defs/: mod.rs  packet.rs  state.rs  structs.rs  tests.rs
src/server/friend_server/: mod.rs  packets_client.rs  packets_server.rs  server_registry.rs
src/server/game_server/: baskets.rs  dummy_world.rs  generator.rs  mod.rs  packets_client.rs  packets_server.rs  persist.rs  registry_client.rs  special_generators.rs  world_state.rs
src/utils/: admin.rs  config.rs  db.rs  mod.rs  text.rs
world_data/: world.hws
