[package]
name = "HAMP"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.1"
chrono = "0.4.44"
base64 = "0.22"
ctrlc = { version = "3", features = ["termination"] }
rand = "0.10.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tiny_http     = "0.12"
jsonwebtoken  = "9"
tungstenite   = "0.24"
sha1          = "0.10"
toml = "1.0.7"
utf16string = "0.2.0"
